--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "course-project-setup",
+  "name": "d-and-d-project",
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "lite-server"
+    "start": "webpack-dev-server",
+    "build": "webpack --config webpack.config.prod.js"
   },
   "author": "",
   "license": "ISC",
